--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="/"
 						target="_blank" class="nerf_authors_v2"> </a>
 				</div>
-
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="https://xueliancheng.github.io/"
 						target="_blank" class="nerf_authors_v2">Xuelian Cheng<span
 							class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">1*</span></a>
@@ -119,7 +118,7 @@
 							class="superscript text-span_nerf">2*</span></a></div>
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="https://dengpingfan.github.io/"
 						target="_blank" class="nerf_authors_v2">Deng-Ping Fan<span
-							class="text-span_nerf_star">3</span><span class="superscript text-span_nerf"></span></a>
+							class="text-span_nerf_star"></span><span class="superscript text-span_nerf"></span></a>
 				</div>
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a
 						href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en" target="_blank"
@@ -144,6 +143,9 @@
 
 			<div class="nerf_authors_list_single nerf_authors_affiliation w-row">
 				<div class="w-col w-col-2">
+					<h1 class="nerf_affiliation_v2"> </h1>
+				</div>
+				<div class="w-col w-col-2">
 					<h1 class="nerf_affiliation_v2"> Monash University </h1>
 				</div>
 				<div class="column w-col w-col-2">
@@ -158,6 +160,9 @@
 			</div>
 
 			<div class="nerf_authors_list_single w-row">
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="/"
+						target="_blank" class="nerf_authors_v2"> </a>
+				</div>
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a
 						href="https://sites.google.com/site/mehrtashharandi/" target="_blank"
 						class="nerf_authors_v2">Mehrtash Harandi<span class="text-span_nerf">1</span></a></div>
@@ -170,6 +175,9 @@
 				</div>
 			</div>
 			<div class="nerf_authors_list_single nerf_authors_affiliation w-row">
+				<div class="w-col w-col-2">
+					<h1 class="nerf_affiliation_v2"> </h1>
+				</div>
 				<div class="w-col w-col-2">
 					<h1 class="nerf_affiliation_v2">Monash University</h1>
 				</div>
