--- a/index.html
+++ b/index.html
@@ -265,35 +265,20 @@
 						<div class="div-block-9 first_video">
 							<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
 									preload="metadata"
-									poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/colorspout_200k_rgb.jpg">
+									poster=" ">
 									<source
-										src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/colorspout_200k_rgb.mp4"
-										type="video/mp4">
-									Your browser does not support the video tag.
-								</video></div>
-							<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
-									preload="metadata"
-									poster="https://storage.googleapis.com/nerf_data/website_renders/images/colorspout_200k_rgb.jpg">
-									<source
-										src="https://storage.googleapis.com/nerf_data/website_renders/colorspout_200k_rgb.mp4"
-										type="video/mp4">
+										src="demo/arctic_fox.avi"
+										type="video/avi">
 									Your browser does not support the video tag.
 								</video></div>
 						</div>
 						<div class="div-block-9">
 							<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
 									preload="metadata"
-									poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/orchid.jpg">
+									poster=" ">
 									<source
-										src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/orchid.mp4"
-										type="video/mp4">
-									Your browser does not support the video tag.
-								</video></div>
-							<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
-									preload="metadata"
-									poster="https://storage.googleapis.com/nerf_data/website_renders/images/orchid.jpg">
-									<source src="https://storage.googleapis.com/nerf_data/website_renders/orchid.mp4"
-										type="video/mp4">
+										src="demo/black_cat_1.avi"
+										type="video/avi">
 									Your browser does not support the video tag.
 								</video></div>
 						</div>
@@ -302,38 +287,10 @@
 						<div class="div-block-9">
 							<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
 									preload="metadata"
-									poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/benchflower_100k_rgb.jpg">
+									poster=" ">
 									<source
-										src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/benchflower_100k_rgb.mp4"
-										type="video/mp4">
-									Your browser does not support the video tag.
-								</video></div>
-							<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
-									preload="metadata"
-									poster="https://storage.googleapis.com/nerf_data/website_renders/images/benchflower_100k_rgb.jpg">
-									<source
-										src="https://storage.googleapis.com/nerf_data/website_renders/benchflower_100k_rgb.mp4"
-										type="video/mp4">
-									Your browser does not support the video tag.
-								</video></div>
-						</div>
-					</div>
-					<div class="w-slide">
-						<div class="div-block-9">
-							<div class="video_class w-embed"><video width=100% height=100% muted controls loop
-									preload="metadata"
-									poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/pecanpie_200k_rgb.jpg">
-									<source
-										src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/pecanpie_200k_rgb.mp4"
-										type="video/mp4">
-									Your browser does not support the video tag.
-								</video></div>
-							<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
-									preload="metadata"
-									poster="https://storage.googleapis.com/nerf_data/website_renders/images/pecanpie_200k_rgb.jpg">
-									<source
-										src="https://storage.googleapis.com/nerf_data/website_renders/pecanpie_200k_rgb.mp4"
-										type="video/mp4">
+										src="demo/flower_crab_spider_2.avi"
+										type="video/avi">
 									Your browser does not support the video tag.
 								</video></div>
 						</div>
