--- a/index.html
+++ b/index.html
@@ -306,7 +306,18 @@
 			</div>
 		</div>
 	</div>
-
+	
+	<div data-anchor="slide1" class="section nerf_section">
+		<div class="w-container">
+			<h2 class="grey-heading_nerf">Overview Video</h2>
+			<div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo stega_movie youtube"><iframe
+					src="https://youtu.be/jG01QUk4wjk?rel=1&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0"
+					frameBorder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto"
+					allow="autoplay; encrypted-media" allowfullscreen="" title="NeRF: Neural Radiance Fields"></iframe>
+			</div><a href="https://youtu.be/jG01QUk4wjk" target="_blank"
+				class="nerf_full_talk_vid">CVPR 2022 Talk Video<span class="superscript"></span></a>
+		</div>
+	</div>
 
 		<table
 			style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
