--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 							class="superscript text-span_nerf">2*</span></a></div>
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="https://dengpingfan.github.io/"
 						target="_blank" class="nerf_authors_v2">Deng-Ping Fan<span
-							class="text-span_nerf_star"></span><span class="superscript text-span_nerf"></span></a>
+							class="text-span_nerf_star">†</span><span class="superscript text-span_nerf">3†</span></a>
 				</div>
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a
 						href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en" target="_blank"
@@ -191,6 +191,8 @@
 			<div class="div-block-10">
 				<div class="nerf_equal_v2"><span class="text-span_nerf">*</span><span
 						class="text-span_nerf_star">*</span>Denotes Equal Contribution</div>
+				<div class="nerf_equal_v2"><span class="text-span_nerf">*</span><span
+					class="text-span_nerf_star">†</span>Corresponding author</div>
 			</div>
 			<div class="link_column_nerf_v2 w-row">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
