--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 		<div class="w-container">
 			<h2 class="grey-heading_nerf">Overview Video</h2>
 			<div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo stega_movie youtube"><iframe
-					src="https://youtu.be/embed/jG01QUk4wjk?rel=1&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0"
+					src="https://www.youtube.com/embed/jG01QUk4wjk?rel=1&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0"
 					frameBorder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto"
 					allow="autoplay; encrypted-media" allowfullscreen="" title="NeRF: Neural Radiance Fields"></iframe>
 			</div><a href="https://youtu.be/jG01QUk4wjk" target="_blank"
