--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
 			<div data-delay="10000" data-animation="slide" class="nerf_slider_v2 w-slider" data-autoplay="true"
 				data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0"
-				data-nav-spacing="10" data-duration="800" data-infinite="true">
+				data-nav-spacing="3" data-duration="800" data-infinite="true">
 				<div class="mask w-slider-mask">
 					<div class="slide w-slide">
 						<div class="div-block-9 first_video">
@@ -274,7 +274,7 @@
 									Your browser does not support the video tag.
 								</video></div>
 						</div>
-						<div class="div-block-9">
+						<!-- <div class="div-block-9">
 							<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
 									preload="metadata"
 									poster=" ">
@@ -283,9 +283,9 @@
 										type="video/avi">
 									Your browser does not support the video tag.
 								</video></div>
-						</div>
+						</div> -->
 					</div>
-					<div class="w-slide">
+					<!-- <div class="w-slide">
 						<div class="div-block-9">
 							<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
 									preload="metadata"
@@ -296,7 +296,7 @@
 									Your browser does not support the video tag.
 								</video></div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 				<div class="w-slider-arrow-left">
 					<div class="w-icon-slider-left"></div>
@@ -320,19 +320,19 @@
 				class="nerf_full_talk_vid">CVPR 2022 Talk Video<span class="superscript"></span></a>
 		</div>
 	</div>
+	<div class="white_section_nerf wf-section">
+		<div class="grey_container citation w-container">
+			<h2 class="grey-heading_nerf">Citation</h2>
+			<p class="paragraph-3 nerf_text nerf_results_text citation">@inproceedings{cheng2022implicit,<br />
+				 title={Implicit Motion Handling for Video Camouflaged Object Detection},<br />  author={Cheng, Xuelian and Xiong, Huan and Fan, Deng-Ping and Zhong, Yiran and Harandi, Mehrtash and Drummond, Tom and Ge, Zongyuan},<br />  year={2022},<br />  booktitle={CVPR},<br />}</p>
+		</div>
+	</div>
 
-		<table
-			style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-			<tbody>
-				<tr>
-					<td style="padding:100px">
-						<br>
-						<p style="text-align:right;">Website template from <a
-								href="https://www.matthewtancik.com/nerf">NeRF</a><br></p>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+		<tbody><tr><td style="padding:100px"><br><p style="text-align:right;">Website template from <a
+							href="https://www.matthewtancik.com/nerf">NeRF</a><br></p></td></tr>
+		</tbody>
+	</table>
 </body>
 
 </html>
