--- a/index.html
+++ b/index.html
@@ -241,13 +241,17 @@
 					<a href="https://drive.google.com/drive/folders/1DEe552YXlcX0qO00MRl21okZupMVsbaZ?usp=sharing"
 						target="_blank" class="link-block w-inline-block"><img
 							src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg"
-							alt="dataset[Google Drive]" class="paper_img image-8_nerf nerf_db_icon"></a>
+							alt="Google Drive" 
+							sizes="(max-width: 479px) 12vw, (max-width: 767px) 7vw, (max-width: 991px) 41.8515625px, 56.6953125px"
+							class="paper_img image-8_nerf nerf_db_icon"></a>
 				</div>
 				<div class="column-2 w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<a href="https://pan.baidu.com/s/19HkEqqdS_N2jm_vU4NVD5g?pwd=bubw" target="_blank"
 						class="link-block w-inline-block"><img
 							src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg"
-							alt="dataset[Baidu Drive]" class="paper_img image-8_nerf nerf_db_icon"></a>
+							alt="Baidu Drive" 
+							sizes="(max-width: 479px) 12vw, (max-width: 767px) 7vw, (max-width: 991px) 41.8515625px, 56.6953125px"
+							class="paper_img image-8_nerf nerf_db_icon"></a>
 				</div>
 			</div>
 			<div class="paper_code_nerf w-row">
