--- a/index.html
+++ b/index.html
@@ -263,52 +263,44 @@
 				</div>
 			</div>
 
-			<div data-delay="10000" data-animation="slide" class="nerf_slider_v2 w-slider" data-autoplay="true"
-				data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0"
-				data-nav-spacing="3" data-duration="800" data-infinite="true">
-				<div class="mask w-slider-mask">
-					<div class="slide w-slide">
-						<div class="div-block-9 first_video">
-							<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
-									preload="metadata"
-									poster=" ">
-									<source
-										src="demo/arctic_fox.avi"
-										type="video/avi">
-									Your browser does not support the video tag.
-								</video></div>
-						</div>
-						<!-- <div class="div-block-9">
-							<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
-									preload="metadata"
-									poster=" ">
-									<source
-										src="demo/black_cat_1.avi"
-										type="video/avi">
-									Your browser does not support the video tag.
-								</video></div>
-						</div> -->
+			<div data-anchor="slide1" class="section nerf_section"></div>
+			<div class="white_section_nerf wf-section">
+				<div class="grey_container w-container">
+					<h2 class="grey-heading_nerf">Video Demo</h2>
+					<p class="paragraph-3 nerf_text nerf_results_text">Here we show the comparison results with SOTA methods.
+					</p>
+					<div>
+						<div class="video_class w-embed"><video width=100% height=100% muted controls loop preload="metadata"
+								poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/viewdirs_website_bww.jpg">
+								<source
+									src="demo/arctic_fox.avi"
+									type="video/mp4">
+								Your browser does not support the video tag.
+							</video></div>
+						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+								preload="metadata"
+								poster="https://storage.googleapis.com/nerf_data/website_renders/images/viewdirs_website_bww.jpg">
+								<source src="demo/arctic_fox.avi"
+									type="video/mp4">
+								Your browser does not support the video tag.
+							</video></div>
+						<div class="video_class w-embed"><video width=100% height=100% muted controls loop preload="metadata"
+								poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/viewdirs_website.jpg">
+								<source
+									src="demo/ibex.avi"
+									type="video/mp4">
+								Your browser does not support the video tag.
+							</video></div>
+						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+								preload="metadata"
+								poster="https://storage.googleapis.com/nerf_data/website_renders/images/viewdirs_website.jpg">
+								<source
+									src="demo/ibex.avi"
+									type="video/mp4">
+								Your browser does not support the video tag.
+							</video></div>
 					</div>
-					<!-- <div class="w-slide">
-						<div class="div-block-9">
-							<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
-									preload="metadata"
-									poster=" ">
-									<source
-										src="demo/flower_crab_spider_2.avi"
-										type="video/avi">
-									Your browser does not support the video tag.
-								</video></div>
-						</div>
-					</div> -->
 				</div>
-				<div class="w-slider-arrow-left">
-					<div class="w-icon-slider-left"></div>
-				</div>
-				<div class="w-slider-arrow-right">
-					<div class="w-icon-slider-right"></div>
-				</div>
-				<div class="nerf_slide_nav w-slider-nav w-slider-nav-invert w-round"></div>
 			</div>
 		</div>
 	</div>
