--- a/index.html
+++ b/index.html
@@ -269,36 +269,10 @@
 					<h2 class="grey-heading_nerf">Video Demo</h2>
 					<p class="paragraph-3 nerf_text nerf_results_text">Here we show the comparison results with SOTA methods.
 					</p>
-					<div>
-						<div class="video_class w-embed"><video width=100% height=100% muted controls loop preload="metadata"
-								poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/viewdirs_website_bww.jpg">
-								<source
-									src="demo/arctic_fox.avi"
-									type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
-								preload="metadata"
-								poster="https://storage.googleapis.com/nerf_data/website_renders/images/viewdirs_website_bww.jpg">
-								<source src="demo/arctic_fox.avi"
-									type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-						<div class="video_class w-embed"><video width=100% height=100% muted controls loop preload="metadata"
-								poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/viewdirs_website.jpg">
-								<source
-									src="demo/ibex.avi"
-									type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
-								preload="metadata"
-								poster="https://storage.googleapis.com/nerf_data/website_renders/images/viewdirs_website.jpg">
-								<source
-									src="demo/ibex.avi"
-									type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
+					<div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo stega_movie youtube"><iframe
+						src="https://www.youtube.com/embed/7WYC6LbkqbU?rel=1&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0"
+						frameBorder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto"
+						allow="autoplay; encrypted-media" allowfullscreen="" title="arctic fox"></iframe>
 					</div>
 				</div>
 			</div>
@@ -311,7 +285,7 @@
 			<div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo stega_movie youtube"><iframe
 					src="https://www.youtube.com/embed/jG01QUk4wjk?rel=1&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0"
 					frameBorder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto"
-					allow="autoplay; encrypted-media" allowfullscreen="" title="NeRF: Neural Radiance Fields"></iframe>
+					allow="autoplay; encrypted-media" allowfullscreen="" title="SLT-Net"></iframe>
 			</div><a href="https://youtu.be/jG01QUk4wjk" target="_blank"
 				class="nerf_full_talk_vid">CVPR 2022 Talk Video<span class="superscript"></span></a>
 		</div>
