--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
 			</div>
 			<div class="paper_code_nerf w-row">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong></div>
+					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data_Google</strong></div>
 				</div>
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu Drive]</strong></div>
+					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu]</strong></div>
 				</div>
 			</div>
 
