--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
 	<script
 		type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-	<link href="https://cdn.iconscout.com/icon/premium/png-128-thumb/cat-33-110144.png"
-		rel="shortcut icon" type="image/x-icon">
+	<link href="https://cdn.iconscout.com/icon/premium/png-128-thumb/cat-33-110144.png" rel="shortcut icon"
+		type="image/x-icon">
 	<link href="https://y7v4p6k4.ssl.hwcdn.net/51db7fcf29a6f36b2a000001/51e06d302f5394c87600002a_webclip-comet.png"
 		rel="apple-touch-icon">
 	<script
@@ -105,8 +105,8 @@
 			<h1 class="nerf_subheader_v2">Implicit Motion Handling for Video Camouflaged Object Detection</h1>
 			<h1 class="eccv_label">CVPR 2022</h1>
 			<div class="nerf_authors_list_single w-row">
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="/"
-						target="_blank" class="nerf_authors_v2"> </a>
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="/" target="_blank"
+						class="nerf_authors_v2"> </a>
 				</div>
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="https://xueliancheng.github.io/"
 						target="_blank" class="nerf_authors_v2">Xuelian Cheng<span
@@ -160,8 +160,8 @@
 			</div>
 
 			<div class="nerf_authors_list_single w-row">
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="/"
-						target="_blank" class="nerf_authors_v2"> </a>
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="/" target="_blank"
+						class="nerf_authors_v2"> </a>
 				</div>
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a
 						href="https://sites.google.com/site/mehrtashharandi/" target="_blank"
@@ -192,7 +192,7 @@
 				<div class="nerf_equal_v2"><span class="text-span_nerf">*</span><span
 						class="text-span_nerf_star">*</span>Denotes Equal Contribution</div>
 				<div class="nerf_equal_v2"><span class="text-span_nerf">*</span><span
-					class="text-span_nerf_star">†</span>Corresponding author</div>
+						class="text-span_nerf_star">†</span>Corresponding author</div>
 			</div>
 			<div class="link_column_nerf_v2 w-row">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
@@ -241,7 +241,7 @@
 					<a href="https://drive.google.com/drive/folders/1DEe552YXlcX0qO00MRl21okZupMVsbaZ?usp=sharing"
 						target="_blank" class="link-block w-inline-block"><img
 							src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg"
-							alt="Google Drive" 
+							alt="Google Drive"
 							sizes="(max-width: 479px) 12vw, (max-width: 767px) 7vw, (max-width: 991px) 41.8515625px, 56.6953125px"
 							class="paper_img image-8_nerf nerf_db_icon"></a>
 				</div>
@@ -249,36 +249,46 @@
 					<a href="https://pan.baidu.com/s/19HkEqqdS_N2jm_vU4NVD5g?pwd=bubw" target="_blank"
 						class="link-block w-inline-block"><img
 							src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg"
-							alt="Baidu Drive" 
+							alt="Baidu Drive"
 							sizes="(max-width: 479px) 12vw, (max-width: 767px) 7vw, (max-width: 991px) 41.8515625px, 56.6953125px"
 							class="paper_img image-8_nerf nerf_db_icon"></a>
 				</div>
 			</div>
 			<div class="paper_code_nerf w-row">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data_Google</strong></div>
+					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong></div>
 				</div>
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu]</strong></div>
+					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu Drive]</strong></div>
 				</div>
 			</div>
 
-			<div data-anchor="slide1" class="section nerf_section"></div>
 			<div class="white_section_nerf wf-section">
-				<div class="grey_container w-container">
-					<h2 class="grey-heading_nerf">Video Demo</h2>
-					<p class="paragraph-3 nerf_text nerf_results_text">Here we show the comparison results with SOTA methods.
-					</p>
-					<div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo stega_movie youtube"><iframe
-						src="https://www.youtube.com/embed/7WYC6LbkqbU?rel=1&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0"
-						frameBorder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto"
-						allow="autoplay; encrypted-media" allowfullscreen="" title="arctic fox"></iframe>
+				<div class="w-container">
+					<h2 class="grey-heading_nerf">Demo videos</h2>
+					<p class="paragraph-3 nerf_text nerf_results_text">Here are results of our proposed network with two top-performing baselines on MoCA-Mask test dataset.</p>
+					<div>
+						<div class="video_class w-embed"><video width=100% height=100% muted controls loop preload="metadata"
+								poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/synth_grid_website.jpg">
+								<source
+									src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/synth_grid_3.mp4"
+									type="video/mp4">
+								Your browser does not support the video tag.
+							</video></div>
+						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+								preload="metadata"
+								poster="https://storage.googleapis.com/nerf_data/website_renders/images/synth_grid_website.jpg">
+								<source src="https://storage.googleapis.com/nerf_data/website_renders/synth_grid_3.mp4"
+									type="video/mp4">
+								Your browser does not support the video tag.
+							</video></div>
 					</div>
 				</div>
 			</div>
+			
 		</div>
 	</div>
-	
+
 	<div data-anchor="slide1" class="section nerf_section">
 		<div class="w-container">
 			<h2 class="grey-heading_nerf">Overview Video</h2>
@@ -286,21 +296,29 @@
 					src="https://www.youtube.com/embed/jG01QUk4wjk?rel=1&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0"
 					frameBorder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto"
 					allow="autoplay; encrypted-media" allowfullscreen="" title="SLT-Net"></iframe>
-			</div><a href="https://youtu.be/jG01QUk4wjk" target="_blank"
-				class="nerf_full_talk_vid">CVPR 2022 Talk Video<span class="superscript"></span></a>
+			</div><a href="https://youtu.be/jG01QUk4wjk" target="_blank" class="nerf_full_talk_vid">CVPR 2022 Talk
+				Video<span class="superscript"></span></a>
 		</div>
 	</div>
 	<div class="white_section_nerf wf-section">
 		<div class="grey_container citation w-container">
 			<h2 class="grey-heading_nerf">Citation</h2>
 			<p class="paragraph-3 nerf_text nerf_results_text citation">@inproceedings{cheng2022implicit,<br />
-				 title={Implicit Motion Handling for Video Camouflaged Object Detection},<br />  author={Cheng, Xuelian and Xiong, Huan and Fan, Deng-Ping and Zhong, Yiran and Harandi, Mehrtash and Drummond, Tom and Ge, Zongyuan},<br />  year={2022},<br />  booktitle={CVPR},<br />}</p>
+				 title={Implicit Motion Handling for Video Camouflaged Object Detection},<br />  author={Cheng, Xuelian
+				and Xiong, Huan and Fan, Deng-Ping and Zhong, Yiran and Harandi, Mehrtash and Drummond, Tom and Ge,
+				Zongyuan},<br />  year={2022},<br />  booktitle={CVPR},<br />}</p>
 		</div>
 	</div>
 
-	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-		<tbody><tr><td style="padding:100px"><br><p style="text-align:right;">Website template from <a
-							href="https://www.matthewtancik.com/nerf">NeRF</a><br></p></td></tr>
+	<table
+		style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+		<tbody>
+			<tr>
+				<td style="padding:100px"><br>
+					<p style="text-align:right;">Website template from <a
+							href="https://www.matthewtancik.com/nerf">NeRF</a><br></p>
+				</td>
+			</tr>
 		</tbody>
 	</table>
 </body>
