--- a/index.html
+++ b/index.html
@@ -236,24 +236,22 @@
 					</div>
 				</div>
 			</div>
-			<div class="link_column_nerf_v2 w-row">
+
+			<!-- <div class="link_column_nerf_v2 w-row">
 				<div class="column-2 w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<a href="https://drive.google.com/drive/folders/1DEe552YXlcX0qO00MRl21okZupMVsbaZ?usp=sharing"
 						target="_blank" class="link-block w-inline-block"><img
 							src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg"
-							alt="Google Drive"
-							sizes="(max-width: 479px) 12vw, (max-width: 767px) 7vw, (max-width: 991px) 41.8515625px, 56.6953125px"
-							class="paper_img image-8_nerf nerf_db_icon"></a>
+							alt="Google Drive" class="paper_img image-8_nerf nerf_db_icon"></a>
 				</div>
 				<div class="column-2 w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<a href="https://pan.baidu.com/s/19HkEqqdS_N2jm_vU4NVD5g?pwd=bubw" target="_blank"
 						class="link-block w-inline-block"><img
 							src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg"
-							alt="Baidu Drive"
-							sizes="(max-width: 479px) 12vw, (max-width: 767px) 7vw, (max-width: 991px) 41.8515625px, 56.6953125px"
-							class="paper_img image-8_nerf nerf_db_icon"></a>
+							alt="Baidu Drive" class="paper_img image-8_nerf nerf_db_icon"></a>
 				</div>
-			</div>
+			</div> -->
+
 			<div class="paper_code_nerf w-row">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong></div>
@@ -269,7 +267,7 @@
 					<p class="paragraph-3 nerf_text nerf_results_text">Here are results of our proposed network with two top-performing baselines on MoCA-Mask test dataset.</p>
 					<div>
 						<div class="video_class w-embed"><video width=100% height=100% muted controls loop preload="metadata"
-								poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/synth_grid_website.jpg">
+								poster=" ">
 								<source
 									src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/synth_grid_3.mp4"
 									type="video/mp4">
@@ -277,7 +275,7 @@
 							</video></div>
 						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
 								preload="metadata"
-								poster="https://storage.googleapis.com/nerf_data/website_renders/images/synth_grid_website.jpg">
+								poster=" ">
 								<source src="https://storage.googleapis.com/nerf_data/website_renders/synth_grid_3.mp4"
 									type="video/mp4">
 								Your browser does not support the video tag.
