--- a/index.html
+++ b/index.html
@@ -269,14 +269,14 @@
 						<div class="video_class w-embed"><video width=100% height=100% muted controls loop preload="metadata"
 								poster=" ">
 								<source
-									src=" "
+									src="demo/arctic_fox.mp4"
 									type="video/mp4">
 								Your browser does not support the video tag.
 							</video></div>
 						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
 								preload="metadata"
 								poster=" ">
-								<source src="https://storage.googleapis.com/nerf_data/website_renders/synth_grid_3.mp4"
+								<source src="demo/arctic_fox.mp4"
 									type="video/mp4">
 								Your browser does not support the video tag.
 							</video></div>
