--- a/index.html
+++ b/index.html
@@ -254,12 +254,23 @@
 
 			<div class="paper_code_nerf w-row">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+					<div class="text-block-2"><strong class="bold-text-nerf_v2">Paper</strong>
+					</div>
+				</div>
+				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+					<div class="text-block-2"><strong class="bold-text-nerf_v2">中译版</strong>
+					</div>
+				</div>
+			</div>
+
+			<!-- <div class="paper_code_nerf w-row">
+				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong></div>
 				</div>
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu Drive]</strong></div>
 				</div>
-			</div>
+			</div> -->
 
 			<div class="white_section_nerf wf-section">
 				<div class="w-container">
