--- a/index.html
+++ b/index.html
@@ -254,47 +254,54 @@
 
 			<div class="paper_code_nerf w-row">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Paper</strong>
-					</div>
-				</div>
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">中译版</strong>
-					</div>
-				</div>
-			</div>
-
-			<!-- <div class="paper_code_nerf w-row">
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong></div>
 				</div>
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu Drive]</strong></div>
 				</div>
-			</div> -->
+			</div>
 
 			<div class="white_section_nerf wf-section">
 				<div class="w-container">
 					<h2 class="grey-heading_nerf">Demo videos</h2>
-					<p class="paragraph-3 nerf_text nerf_results_text">Here are results of our proposed network with two top-performing baselines on MoCA-Mask test dataset.</p>
+					<p class="paragraph-3 nerf_text nerf_results_text">Here are results of our proposed network with two
+						top-performing baselines on MoCA-Mask test dataset.</p>
 					<div>
-						<div class="video_class w-embed"><video width=100% height=100% muted controls loop preload="metadata"
-								poster=" ">
-								<source
-									src="demo/arctic_fox.mp4"
-									type="video/mp4">
+						<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+								preload="metadata" poster=" ">
+								<source src="demo/arctic_fox.mp4" type="video/mp4">
 								Your browser does not support the video tag.
 							</video></div>
 						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
-								preload="metadata"
-								poster=" ">
-								<source src="demo/arctic_fox.mp4"
-									type="video/mp4">
+								preload="metadata" poster=" ">
+								<source src="demo/arctic_fox.mp4" type="video/mp4">
+								Your browser does not support the video tag.
+							</video></div>
+						<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+								preload="metadata" poster=" ">
+								<source src="demo/black_cat_1.mp4" type="video/mp4">
+								Your browser does not support the video tag.
+							</video></div>
+						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+								preload="metadata" poster=" ">
+								<source src="demo/black_cat_1.mp4" type="video/mp4">
+								Your browser does not support the video tag.
+							</video></div>
+						<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+								preload="metadata" poster=" ">
+								<source src="demo/ibex.mp4" type="video/mp4">
+								Your browser does not support the video tag.
+							</video></div>
+						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+								preload="metadata" poster=" ">
+								<source src="demo/ibex.mp4" type="video/mp4">
 								Your browser does not support the video tag.
 							</video></div>
 					</div>
+
 				</div>
 			</div>
-			
+
 		</div>
 	</div>
 
