--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
 				<div class="nerf_equal_v2"><span class="text-span_nerf">*</span><span
 						class="text-span_nerf_star">†</span>Corresponding author</div>
 			</div>
+
 			<div class="link_column_nerf_v2 w-row">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Cheng_Implicit_Motion_Handling_for_Video_Camouflaged_Object_Detection_CVPR_2022_paper.pdf"
@@ -250,7 +251,6 @@
 							alt="Baidu Drive" class="paper_img image-8_nerf nerf_db_icon"></a>
 				</div>
 			</div>
-			<br>
 			<div class="paper_code_nerf w-row">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong></div>
@@ -308,12 +308,12 @@
 						top-performing baselines on MoCA-Mask test dataset.</p>
 					<div>
 						<div class="video_class w-embed"><video width=100% height=40% muted controls loop
-								preload="metadata" poster=" ">
+								preload="metadata" poster="demo/fox.png">
 								<source src="demo/arctic_fox.mp4" type="video/mp4">
 								Your browser does not support the video tag.
 							</video></div>
 						<div class="video_class mobile w-embed"><video width=100% height=40% muted controls loop
-								preload="metadata" poster=" ">
+								preload="metadata" poster="demo/fox.png">
 								<source src="demo/arctic_fox.mp4" type="video/mp4">
 								Your browser does not support the video tag.
 							</video></div>
