--- a/index.html
+++ b/index.html
@@ -328,12 +328,12 @@
 								Your browser does not support the video tag.
 							</video></div>
 						<div class="video_class w-embed"><video width=100% height=30% muted controls loop
-								preload="metadata" poster=" ">
+								preload="metadata" poster="demo/ibex.png">
 								<source src="demo/ibex.mp4" type="video/mp4">
 								Your browser does not support the video tag.
 							</video></div>
 						<div class="video_class mobile w-embed"><video width=100% height=30% muted controls loop
-								preload="metadata" poster=" ">
+								preload="metadata" poster="demo/ibex.png">
 								<source src="demo/ibex.mp4" type="video/mp4">
 								Your browser does not support the video tag.
 							</video></div>
