--- a/index.html
+++ b/index.html
@@ -318,12 +318,12 @@
 								Your browser does not support the video tag.
 							</video></div>
 						<div class="video_class w-embed"><video width=100% height=30% muted controls loop
-								preload="metadata" poster=" ">
+								preload="metadata" poster="demo/cat.png">
 								<source src="demo/black_cat_1.mp4" type="video/mp4">
 								Your browser does not support the video tag.
 							</video></div>
 						<div class="video_class mobile w-embed"><video width=100% height=30% muted controls loop
-								preload="metadata" poster=" ">
+								preload="metadata" poster="demo/cat.png">
 								<source src="demo/black_cat_1.mp4" type="video/mp4">
 								Your browser does not support the video tag.
 							</video></div>
