--- a/index.html
+++ b/index.html
@@ -260,84 +260,41 @@
 				</div>
 			</div>
 
-			<div data-anchor="slide1" class="section nerf_section"></div>
-			<!-- <div class="white_section_nerf wf-section">
-				<div class="grey_container w-container">
-					<h2 class="grey-heading_nerf">Demo videos</h2>
-					<p class="paragraph-3 nerf_text nerf_results_text">Here are results of our proposed network with two
-						top-performing baselines on MoCA-Mask test dataset.
-					</p>
-					<div>
-						<div class="video_class w-embed"><video width=100% height=100% muted controls loop preload="metadata"
-								poster=" ">
-								<source
-									src="demo/arctic_fox.mp4"
-									type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
-								preload="metadata"
-								poster=" ">
-								<source src="demo/arctic_fox.mp4"
-									type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-						<div class="video_class w-embed"><video width=100% height=100% muted controls loop preload="metadata"
-								poster=" ">
-								<source
-									src="demo/black_cat_1.mp4"
-									type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-						<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
-								preload="metadata"
-								poster=" ">
-								<source
-									src="demo/black_cat_1.mp4"
-									type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-					</div>
-				</div>
-			</div> -->
-			
 			<div class="white_section_nerf wf-section">
 				<div class="w-container">
 					<h2 class="grey-heading_nerf">Demo videos</h2>
 					<p class="paragraph-3 nerf_text nerf_results_text">Here are results of our proposed network with two
 						top-performing baselines on MoCA-Mask test dataset.</p>
-					<div>
-						<div class="video_class w-embed"><video width=100% height=30% muted controls loop
-								preload="metadata" poster="demo/fox.png">
-								<source src="demo/arctic_fox.mp4" type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-						<div class="video_class mobile w-embed"><video width=100% height=30% muted controls loop
-								preload="metadata" poster="demo/fox.png">
-								<source src="demo/arctic_fox.mp4" type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-						<div class="video_class w-embed"><video width=100% height=30% muted controls loop
-								preload="metadata" poster="demo/cat.png">
-								<source src="demo/black_cat_1.mp4" type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-						<div class="video_class mobile w-embed"><video width=100% height=30% muted controls loop
-								preload="metadata" poster="demo/cat.png">
-								<source src="demo/black_cat_1.mp4" type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-						<div class="video_class w-embed"><video width=100% height=30% muted controls loop
-								preload="metadata" poster="demo/ibex.png">
-								<source src="demo/ibex.mp4" type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-						<div class="video_class mobile w-embed"><video width=100% height=30% muted controls loop
-								preload="metadata" poster="demo/ibex.png">
-								<source src="demo/ibex.mp4" type="video/mp4">
-								Your browser does not support the video tag.
-							</video></div>
-					</div>
+					<div class="video_class w-embed"><video width=100% height=30% muted controls loop preload="metadata"
+							poster="demo/fox.png">
+							<source src="demo/arctic_fox.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=30% muted controls loop
+							preload="metadata" poster="demo/fox.png">
+							<source src="demo/arctic_fox.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class w-embed"><video width=100% height=30% muted controls loop preload="metadata"
+							poster="demo/cat.png">
+							<source src="demo/black_cat_1.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=30% muted controls loop
+							preload="metadata" poster="demo/cat.png">
+							<source src="demo/black_cat_1.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class w-embed"><video width=100% height=30% muted controls loop preload="metadata"
+							poster="demo/ibex.png">
+							<source src="demo/ibex.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=30% muted controls loop
+							preload="metadata" poster="demo/ibex.png">
+							<source src="demo/ibex.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
 
 				</div>
 			</div>
