--- a/index.html
+++ b/index.html
@@ -266,33 +266,33 @@
 					<p class="paragraph-3 nerf_text nerf_results_text">Here are results of our proposed network with two
 						top-performing baselines on MoCA-Mask test dataset.</p>
 					<div class="video_class w-embed"><video width=100% height=30% muted controls loop preload="metadata"
-							poster="demo/fox.png">
+							poster="demo/arctic_fox.png">
 							<source src="demo/arctic_fox.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video></div>
 					<div class="video_class mobile w-embed"><video width=100% height=30% muted controls loop
-							preload="metadata" poster="demo/fox.png">
+							preload="metadata" poster="demo/arctic_fox.png">
 							<source src="demo/arctic_fox.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video></div>
 					<div class="video_class w-embed"><video width=100% height=30% muted controls loop preload="metadata"
-							poster="demo/cat.png">
+							poster="demo/black_cat_1.png">
 							<source src="demo/black_cat_1.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video></div>
 					<div class="video_class mobile w-embed"><video width=100% height=30% muted controls loop
-							preload="metadata" poster="demo/cat.png">
+							preload="metadata" poster="demo/black_cat_1.png">
 							<source src="demo/black_cat_1.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video></div>
 					<div class="video_class w-embed"><video width=100% height=30% muted controls loop preload="metadata"
-							poster="demo/ibex.png">
-							<source src="demo/ibex.mp4" type="video/mp4">
+							poster="demo/flower_crab_spider_2.png">
+							<source src="demo/flower_crab_spider_2.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video></div>
 					<div class="video_class mobile w-embed"><video width=100% height=30% muted controls loop
-							preload="metadata" poster="demo/ibex.png">
-							<source src="demo/ibex.mp4" type="video/mp4">
+							preload="metadata" poster="demo/flower_crab_spider_2.png">
+							<source src="demo/flower_crab_spider_2.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video></div>
 
