--- a/index.html
+++ b/index.html
@@ -239,6 +239,11 @@
 			</div>
 			<div class="link_column_nerf_v2 w-row">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+					<a href=" " target="_blank" class="link-block w-inline-block"><img
+							src=" "
+							alt="place" class="paper_img image-8_nerf nerf_db_icon"></a>
+				</div>
+				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<a href="https://drive.google.com/drive/folders/1DEe552YXlcX0qO00MRl21okZupMVsbaZ?usp=sharing"
 						target="_blank" class="link-block w-inline-block"><img
 							src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg"
@@ -252,6 +257,9 @@
 				</div>
 			</div>
 			<div class="paper_code_nerf w-row">
+				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+					<div class="text-block-2"><strong class="bold-text-nerf_v2"> </div>
+				</div>
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong></div>
 				</div>
