--- a/index.html
+++ b/index.html
@@ -237,38 +237,40 @@
 					</div>
 				</div>
 			</div>
-			<div class="link_column_nerf_v2 w-row">	
+			<div class="link_column_nerf_v2 w-row">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<a href="https://drive.google.com/drive/folders/1DEe552YXlcX0qO00MRl21okZupMVsbaZ?usp=sharing" target="_blank"
-						class="link-block w-inline-block"><img
+					<a href="https://drive.google.com/drive/folders/1DEe552YXlcX0qO00MRl21okZupMVsbaZ?usp=sharing"
+						target="_blank" class="link-block w-inline-block"><img
 							src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cae3b53b42ebb3dd4175a82_68747470733a2f2f7777772e69636f6e66696e6465722e636f6d2f646174612f69636f6e732f6f637469636f6e732f313032342f6d61726b2d6769746875622d3235362e706e67.png"
-							alt="code" class="paper_img image-8 github_icon_nerf_v2"></a>
+							alt="GDrive" class="paper_img image-8 github_icon_nerf_v2"></a>
 				</div>
 
-				</div>
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<a href="https://pan.baidu.com/s/19HkEqqdS_N2jm_vU4NVD5g?pwd=bubw" target="_blank"
-						class="link-block w-inline-block"><img
-							src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg"
-							alt="Baidu Drive" class="paper_img image-8_nerf nerf_db_icon"></a>
-				</div>
 			</div>
-			<div class="paper_code_nerf w-row">
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong></div>
-				</div>
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu Drive]</strong></div>
-				</div>
+			<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+				<a href="https://pan.baidu.com/s/19HkEqqdS_N2jm_vU4NVD5g?pwd=bubw" target="_blank"
+					class="link-block w-inline-block"><img
+						src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg"
+						alt="Baidu Drive" class="paper_img image-8_nerf nerf_db_icon"></a>
 			</div>
+		</div>
+		<div class="paper_code_nerf w-row">
+			<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+				<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong></div>
+			</div>
+			<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+				<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu Drive]</strong></div>
+			</div>
+		</div>
 
-			<div class="white_section_nerf wf-section">
-				<div class="w-container">
-					<h2 class="grey-heading_nerf">Demo videos</h2>
-					<p class="paragraph-3 nerf_text nerf_results_text">Here are results of our proposed network with two
-						top-performing baselines on MoCA-Mask test dataset.</p>
-					<div class="video_class w-embed"><video width=100% height=100% muted controls loop preload="metadata"
-							poster="demo/arctic_fox.png">
+		<div class="white_section_nerf wf-section">
+			<div class="w-container">
+				<h2 class="grey-heading_nerf">Demo videos</h2>
+				<p class="paragraph-3 nerf_text nerf_results_text">Here are results of our proposed network with two
+					top-performing baselines on MoCA-Mask test dataset.</p>
+
+				<div>
+					<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata" poster="demo/arctic_fox.png">
 							<source src="demo/arctic_fox.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video></div>
@@ -299,9 +301,11 @@
 						</video></div>
 
 				</div>
-			</div>
 
+			</div>
 		</div>
+
+	</div>
 	</div>
 
 	<div data-anchor="slide1" class="section nerf_section">
