--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 					<a href="https://pan.baidu.com/s/19HkEqqdS_N2jm_vU4NVD5g?pwd=bubw" target="_blank"
 						class="link-block w-inline-block"><img
 							src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg"
-							alt="Baidu Drive" class="paper_img image-8_nerf nerf_db_icon"></a>
+							alt="Baidu Drive" class="paper_img image-8 github_icon_nerf_v2"></a>
 				</div>
 			</div>
 			<div class="paper_code_nerf w-row">
