--- a/index.html
+++ b/index.html
@@ -311,6 +311,15 @@
 		</div>
 	</div>
 
+	<table align=center width=200>
+		<tr>
+			<td width=100><center><h1>Visitors</h1></center>
+				<!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM"></script> -->
+				<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=1e5882&cmo=5daa5f&cmn=7f313b&ct=ffffff'></script>
+			</td>
+		</tr>
+	</table>
+
 	<table
 		style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 		<tbody>
