--- a/index.html
+++ b/index.html
@@ -316,13 +316,12 @@
 		<tbody>
 			<tr style="padding:0px">
 				<td style="padding:2.5%;width:16%;max-width:16%">
-					<script type='text/javascript' id='clustrmaps'
-						src='//cdn.clustrmaps.com/map_v2.js?cl=d3bdbd&w=a&t=n&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=ffffff&cmo=217012&cmn=a84451&ct=808080'></script>
+					<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=6d6a6a&w=a&t=n&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=ffffff&cmo=217012&cmn=a84451&ct=808080'></script>
 				</td>
 			</tr>
 			
 			<tr>
-				<td style="padding:2.5%";width:16%;max-width:16%"><br>
+				<td style="padding:2.5%;width:16%;max-width:16%">
 					<p style="text-align:right;">Website template from <a
 							href="https://www.matthewtancik.com/nerf">NeRF</a><br></p>
 				</td>
