--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 	</div>
 
 	<table
-		style="width:100%;max-width:800;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+		style="width:100%;max-width:900;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 		<tbody>
 			<tr>
 				<td style="padding:10px;width:35%;vertical-align:middle">
@@ -320,7 +320,7 @@
 						src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=a&t=n&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=ffffff&cmo=63c49a&cmn=d88237&ct=808080'></script> -->
 					<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=6d6a6a&w=a&t=n&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=ffffff&cmo=217012&cmn=a84451&ct=808080'></script>
 				</td>
-				<td style="padding:10px;width:30%;valign:bottom">
+				<td style="padding:10px;width:30%;vertical-align:bottom">
 					<p style="text-align:right;">Website template from <a
 							href="https://www.matthewtancik.com/nerf">NeRF</a><br></p>
 				</td>
